--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,16 @@
 {
-  "rewrites": [
+  "version": 2,
+  "builds": [
     {
-      "source": "/ask-ai",
-      "destination": "/api/ask-ai"
+      "src": "api/ask-ai.js",
+      "use": "@vercel/node"
     }
   ],
-  "headers": [
+  "routes": [
     {
-      "source": "/api/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "*" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET,POST,OPTIONS" },
-        { "key": "Access-Control-Allow-Headers", "value": "Content-Type" }
-      ]
+      "src": "/api/ask-ai",
+      "dest": "api/ask-ai.js"
     }
   ]
 }
+
