--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon api/ask-ai.js"
+    "start": "npm server.js"
   },
   "keywords": [],
   "author": "",
